JEAP-6743 Add base classes for Spring Boot integration tests