@@ -1,2 +1,2 @@
 --enable-native-access=ALL-UNNAMED
--Xshare:off
+--sun-misc-unsafe-memory-access=allow
